exams/try00/2-1-max/2-1-max.trace.txt
= Host-specific information ====================================================
$> hostname; uname -msr
vo-f4.21-school.ru
Darwin 16.7.0 x86_64
$> date
Sat Sep 28 15:42:41 MSK 2019
$> gcc --version
Configured with: --prefix=/Applications/Xcode.app/Contents/Developer/usr --with-gxx-include-dir=/usr/include/c++/4.2.1
Apple LLVM version 9.0.0 (clang-900.0.39.2)
Target: x86_64-apple-darwin16.7.0
Thread model: posix
InstalledDir: /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin
$> clang --version
Apple LLVM version 9.0.0 (clang-900.0.39.2)
Target: x86_64-apple-darwin16.7.0
Thread model: posix
InstalledDir: /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin

= User files collection ========================================================
Collecting user files from Vogsphere
Repository URL: auto-exam/2019/c-exam-alone-in-the-dark-beginner/exam_20190928/pcarolei

= Git history ==================================================================
$> git -C /var/folders/fd/b49kmzl56y752vbv83qkvfhw0000gq/T/tmptcymRM/user log --pretty='%H - %an, %ad : %s'
06d09de5a80c7b33beef044575cd5c544468bebf - Exam 42, Sat Sep 28 15:41:50 2019 +0300 : updated max
1d983e2a86396a25fb8c60228456228509258b06 - Exam 42, Sat Sep 28 15:41:00 2019 +0300 : + max
4518649557e2061db6dbf30bef3cd783e93fdf4c - Exam 42, Sat Sep 28 15:23:54 2019 +0300 : +ft_atoi
fa5373c66743bf24655762e554ff27a30d47ba5a - Exam 42, Sat Sep 28 14:38:06 2019 +0300 : + rotone
c0a2eb550a4f80eaea00bde4c6ff53eaf423c2f2 - Exam 42, Sat Sep 28 14:14:39 2019 +0300 : + maff_alpha
 
= Collected files ==========================================
$> ls -lAR /var/folders/fd/b49kmzl56y752vbv83qkvfhw0000gq/T/tmptcymRM/user
total 8
-rw-r--r--  1 deepthought  deepthought  1104 Sep 28 15:42 __GIT_HISTORY
drwxr-xr-x  3 deepthought  deepthought   102 Sep 28 15:42 ft_atoi
drwxr-xr-x  3 deepthought  deepthought   102 Sep 28 15:42 maff_alpha
drwxr-xr-x  3 deepthought  deepthought   102 Sep 28 15:42 max
drwxr-xr-x  3 deepthought  deepthought   102 Sep 28 15:42 rotone

/var/folders/fd/b49kmzl56y752vbv83qkvfhw0000gq/T/tmptcymRM/user/ft_atoi:
total 8
-rw-r--r--  1 deepthought  deepthought  528 Sep 28 15:42 ft_atoi.c

/var/folders/fd/b49kmzl56y752vbv83qkvfhw0000gq/T/tmptcymRM/user/maff_alpha:
total 8
-rw-r--r--  1 deepthought  deepthought  96 Sep 28 15:42 maff_alpha.c

/var/folders/fd/b49kmzl56y752vbv83qkvfhw0000gq/T/tmptcymRM/user/max:
total 8
-rw-r--r--  1 deepthought  deepthought  206 Sep 28 15:42 max.c

/var/folders/fd/b49kmzl56y752vbv83qkvfhw0000gq/T/tmptcymRM/user/rotone:
total 8
-rw-r--r--  1 deepthought  deepthought  507 Sep 28 15:42 rotone.c
 
= max ==========================================================================
$> gcc -Wextra -Wall -Werror main.c max.c -o user_exe 
max.c:10:11: error: comparison of integers of different signs: 'int' and 'unsigned int' [-Werror,-Wsign-compare]
        while (i < len)
               ~ ^ ~~~
1 error generated.

Could not compile 'user_exe'
Grade: 0

= Final grade: 0 ===============================================================
